common/traefik/traefik-ui-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ui
spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/api/`) || PathPrefix(`/traefik`)
    kind: Rule
    priority: 1
    services:
    - name: api@internal
      kind: TraefikService
    middlewares:
      - name: traefik-ui

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-ui
spec:
  stripPrefix:
    prefixes:
      - /traefik
